# Study-ImageTextRetrieval

./: .gitignore  pyproject.toml
notebooks/: Study-ImageTextRetrieval.ipynb
