[project]
name = "study-imagetextretrieval"
version = "0.1.0"

author = [{ name = "Дмитрий Бервинов" }]

license = { text = "MIT" }
description = "Data Science проект"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uv>=0.9.5",
]

